[package]
name = "resamplescope-rs"
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
license = "GPL-3.0-or-later"
description = "Reverse-engineer the resampling filter used by any image resizer"
repository = "https://github.com/imazen/resamplescope-rs"
keywords = ["image", "resampling", "filter", "analysis", "quality"]
categories = ["graphics", "multimedia::images"]

[lib]
name = "resamplescope"

[dependencies]
imgref = "1"
rgb = { version = "0.8", default-features = false }
thiserror = "2"

[dev-dependencies]
png = "0.17"
# Note: zenimage's resampling filters are derived from imageflow and are
# dual-licensed AGPL-3.0-or-later / commercial. They are used here only
# for testing (dev-dependency) and do not affect the license of this crate.
zenimage = { path = "/home/lilith/work/zenimage", default-features = false }
linear-srgb = { path = "/home/lilith/work/linear-srgb", default-features = false, features = ["std"] }
