[package]
name = "resamplescope-rs"
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
license = "AGPL-3.0-or-later"
description = "Validate, compare, and plot the resampling filters/kernels used by any image resizer"
repository = "https://github.com/imazen/resamplescope-rs"
keywords = ["image", "resampling", "filter", "analysis", "quality"]
categories = ["graphics", "multimedia::images"]
readme = "README.md"
exclude = ["tests/local_only/"]

[lib]
name = "resamplescope"

[features]
c-reference = ["dep:cc"]

[dependencies]
imgref = "1"
rgb = { version = "0.8", default-features = false }
thiserror = "2"

[build-dependencies]
cc = { version = "1", optional = true }

[dev-dependencies]
png = "0.17"
